@@ -84,7 +84,7 @@ DWARF section [28] '.debug_info' at offset 0x1078:
  [Offset]
  Compilation unit at offset 0:
  Version: 4, Abbreviation section offset: 0, Address size: 8, Offset size: 4
- [     b]  compile_unit
+ [     b]  compile_unit         abbrev: 6
            producer             (strp) "GNU C 4.7.0 20120507 (Red Hat 4.7.0-5) -mtune=generic -march=x86-64 -g"
            language             (data1) C89 (1)
            name                 (strp) "main.c"
@@ -92,12 +92,12 @@ DWARF section [28] '.debug_info' at offset 0x1078:
            low_pc               (addr) 0x00000000004006ac <main>
            high_pc              (udata) 44 (0x00000000004006d8)
            stmt_list            (sec_offset) 0
- [    26]    imported_unit
+ [    26]    imported_unit        abbrev: 5
              import               (GNU_ref_alt) [     b]
- [    2b]    pointer_type
+ [    2b]    pointer_type         abbrev: 1
              byte_size            (data1) 8
              type                 (GNU_ref_alt) [    53]
- [    31]    subprogram
+ [    31]    subprogram           abbrev: 3
              external             (flag_present) yes
              name                 (strp) "main"
              decl_file            (data1) 1
@@ -110,28 +110,28 @@ DWARF section [28] '.debug_info' at offset 0x1078:
               [ 0] call_frame_cfa
              GNU_all_tail_call_sites (flag_present) yes
              sibling              (ref_udata) [    6e]
- [    48]      formal_parameter
+ [    48]      formal_parameter     abbrev: 8
                name                 (strp) "argc"
                decl_file            (data1) 1
                decl_line            (data1) 3
                type                 (GNU_ref_alt) [    3e]
                location             (exprloc) 
                 [ 0] fbreg -36
- [    56]      formal_parameter
+ [    56]      formal_parameter     abbrev: 4
                name                 (strp) "argv"
                decl_file            (data1) 1
                decl_line            (data1) 3
                type                 (ref_udata) [    6e]
                location             (exprloc) 
                 [ 0] fbreg -48
- [    61]      variable
+ [    61]      variable             abbrev: 7
                name                 (string) "b"
                decl_file            (data1) 1
                decl_line            (data1) 5
                type                 (GNU_ref_alt) [    5a]
                location             (exprloc) 
                 [ 0] fbreg -32
- [    6e]    pointer_type
+ [    6e]    pointer_type         abbrev: 2
              byte_size            (data1) 8
              type                 (ref_udata) [    2b]
 EOF
@@ -145,7 +145,7 @@ DWARF section [28] '.debug_info' at offset 0x1078:
  [Offset]
  Compilation unit at offset 0:
  Version: 4, Abbreviation section offset: 0, Address size: 8, Offset size: 4
- [     b]  compile_unit
+ [     b]  compile_unit         abbrev: 6
            producer             (strp) "GNU C 4.7.0 20120507 (Red Hat 4.7.0-5) -mtune=generic -march=x86-64 -g"
            language             (data1) C89 (1)
            name                 (strp) "main.c"
@@ -153,12 +153,12 @@ DWARF section [28] '.debug_info' at offset 0x1078:
            low_pc               (addr) 0x00000000004006ac <main>
            high_pc              (udata) 44 (0x00000000004006d8)
            stmt_list            (sec_offset) 0
- [    26]    imported_unit
+ [    26]    imported_unit        abbrev: 5
              import               (GNU_ref_alt) [     b]
- [    2b]    pointer_type
+ [    2b]    pointer_type         abbrev: 1
              byte_size            (data1) 8
              type                 (GNU_ref_alt) [    53]
- [    31]    subprogram
+ [    31]    subprogram           abbrev: 3
              external             (flag_present) yes
              name                 (strp) "main"
              decl_file            (data1) 1
@@ -171,28 +171,28 @@ DWARF section [28] '.debug_info' at offset 0x1078:
               [ 0] call_frame_cfa
              GNU_all_tail_call_sites (flag_present) yes
              sibling              (ref_udata) [    6e]
- [    48]      formal_parameter
+ [    48]      formal_parameter     abbrev: 8
                name                 (strp) "argc"
                decl_file            (data1) 1
                decl_line            (data1) 3
                type                 (GNU_ref_alt) [    3e]
                location             (exprloc) 
                 [ 0] fbreg -36
- [    56]      formal_parameter
+ [    56]      formal_parameter     abbrev: 4
                name                 (strp) "argv"
                decl_file            (data1) 1
                decl_line            (data1) 3
                type                 (ref_udata) [    6e]
                location             (exprloc) 
                 [ 0] fbreg -48
- [    61]      variable
+ [    61]      variable             abbrev: 7
                name                 (string) "b"
                decl_file            (data1) 1
                decl_line            (data1) 5
                type                 (GNU_ref_alt) [    5a]
                location             (exprloc) 
                 [ 0] fbreg -32
- [    6e]    pointer_type
+ [    6e]    pointer_type         abbrev: 2
              byte_size            (data1) 8
              type                 (ref_udata) [    2b]
 EOF
@@ -205,7 +205,7 @@ DWARF section [25] '.debug_info' at offset 0x106c:
  [Offset]
  Compilation unit at offset 0:
  Version: 4, Abbreviation section offset: 0, Address size: 8, Offset size: 4
- [     b]  compile_unit
+ [     b]  compile_unit         abbrev: 3
            producer             (strp) "GNU C 4.7.0 20120507 (Red Hat 4.7.0-5) -fpreprocessed -mtune=generic -march=x86-64 -g -fPIC"
            language             (data1) C89 (1)
            name                 (strp) "shared.c"
@@ -213,9 +213,9 @@ DWARF section [25] '.debug_info' at offset 0x106c:
            low_pc               (addr) +0x0000000000000670 <call_foo>
            high_pc              (udata) 23 (+0x0000000000000687)
            stmt_list            (sec_offset) 0
- [    26]    imported_unit
+ [    26]    imported_unit        abbrev: 2
              import               (GNU_ref_alt) [     b]
- [    2b]    subprogram
+ [    2b]    subprogram           abbrev: 1
              external             (flag_present) yes
              name                 (strp) "call_foo"
              decl_file            (data1) 1
@@ -227,7 +227,7 @@ DWARF section [25] '.debug_info' at offset 0x106c:
              frame_base           (exprloc) 
               [ 0] call_frame_cfa
              GNU_all_call_sites   (flag_present) yes
- [    41]      formal_parameter
+ [    41]      formal_parameter     abbrev: 4
                name                 (string) "fb"
                decl_file            (data1) 1
                decl_line            (data1) 3
@@ -245,7 +245,7 @@ DWARF section [25] '.debug_info' at offset 0x106c:
  [Offset]
  Compilation unit at offset 0:
  Version: 4, Abbreviation section offset: 0, Address size: 8, Offset size: 4
- [     b]  compile_unit
+ [     b]  compile_unit         abbrev: 3
            producer             (strp) "GNU C 4.7.0 20120507 (Red Hat 4.7.0-5) -fpreprocessed -mtune=generic -march=x86-64 -g -fPIC"
            language             (data1) C89 (1)
            name                 (strp) "shared.c"
@@ -253,9 +253,9 @@ DWARF section [25] '.debug_info' at offset 0x106c:
            low_pc               (addr) +0x0000000000000670 <call_foo>
            high_pc              (udata) 23 (+0x0000000000000687)
            stmt_list            (sec_offset) 0
- [    26]    imported_unit
+ [    26]    imported_unit        abbrev: 2
              import               (GNU_ref_alt) [     b]
- [    2b]    subprogram
+ [    2b]    subprogram           abbrev: 1
              external             (flag_present) yes
              name                 (strp) "call_foo"
              decl_file            (data1) 1
@@ -267,7 +267,7 @@ DWARF section [25] '.debug_info' at offset 0x106c:
              frame_base           (exprloc) 
               [ 0] call_frame_cfa
              GNU_all_call_sites   (flag_present) yes
- [    41]      formal_parameter
+ [    41]      formal_parameter     abbrev: 4
                name                 (string) "fb"
                decl_file            (data1) 1
                decl_line            (data1) 3
@@ -284,7 +284,7 @@ DWARF section [28] '.debug_info' at offset 0x1088:
  [Offset]
  Compilation unit at offset 0:
  Version: 4, Abbreviation section offset: 0, Address size: 8, Offset size: 4
- [     b]  compile_unit
+ [     b]  compile_unit         abbrev: 5
            producer             (GNU_strp_alt) "GNU C 4.7.2 20121109 (Red Hat 4.7.2-8) -mtune=generic -march=x86-64 -g"
            language             (data1) C89 (1)
            name                 (GNU_strp_alt) "main.c"
@@ -292,9 +292,9 @@ DWARF section [28] '.debug_info' at offset 0x1088:
            low_pc               (addr) 0x00000000004004ec <main>
            high_pc              (udata) 18 (0x00000000004004fe)
            stmt_list            (sec_offset) 0
- [    26]    imported_unit
+ [    26]    imported_unit        abbrev: 2
              import               (GNU_ref_alt) [     b]
- [    2b]    subprogram
+ [    2b]    subprogram           abbrev: 4
              external             (flag_present) yes
              name                 (GNU_strp_alt) "main"
              decl_file            (data1) 1
@@ -306,21 +306,21 @@ DWARF section [28] '.debug_info' at offset 0x1088:
              frame_base           (exprloc) 
               [ 0] call_frame_cfa
              GNU_all_call_sites   (flag_present) yes
- [    41]      formal_parameter
+ [    41]      formal_parameter     abbrev: 1
                name                 (GNU_strp_alt) "argc"
                decl_file            (data1) 1
                decl_line            (data1) 8
                type                 (GNU_ref_alt) [    30]
                location             (exprloc) 
                 [ 0] fbreg -36
- [    4f]      formal_parameter
+ [    4f]      formal_parameter     abbrev: 1
                name                 (GNU_strp_alt) "argv"
                decl_file            (data1) 1
                decl_line            (data1) 8
                type                 (GNU_ref_alt) [    41]
                location             (exprloc) 
                 [ 0] fbreg -48
- [    5d]      variable
+ [    5d]      variable             abbrev: 3
                name                 (string) "fbb"
                decl_file            (data1) 1
                decl_line            (data1) 10
